--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Disciplined Creator Agent</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Aesthetic Improvement: Subtle dark gradient for depth */
         body {
             font-family: 'Inter', sans-serif;
             background-color: #030712; 
+            /* Subtle radial gradient for aesthetic background */
+            background: radial-gradient(at top, #0f172a 0%, #030712 70%);
         }
         .main-container {
             height: 100vh;
@@ -40,8 +43,8 @@
         <div id="chat-container" class="chat-container space-y-4">
             <div class="flex justify-start">
                 <div class="max-w-xs sm:max-w-md p-4 rounded-xl bg-gray-700 shadow-xl text-sm">
-                    <p class="font-bold text-blue-300 mb-1">Agent:</p>
-                    <p>System Initialized. I am ready to help you build your system for clarity and consistency. What challenge are you facing today?</p>
+                    <p class="font-bold text-blue-300 mb-1">Agent (Chandu):</p>
+                    <p>Hello! I am Chandu. How are you today? Tell me what is your challenge and how can I help you.</p>
                 </div>
             </div>
         </div>
@@ -128,15 +131,14 @@
                         const errorJson = JSON.parse(errorText);
                         throw new Error(errorJson.error || `Server responded with status: ${response.status}`);
                     } catch {
-                        // This handles the non-JSON error (the original "Unexpected token 'T'")
-                        throw new Error(`Server returned a non-JSON error. Status: ${response.status}. This usually points to an **Invalid API Key** configuration.`);
+                        // This handles non-JSON errors from the API (like 404/403)
+                        throw new Error(`Server returned a non-JSON error. Status: ${response.status}. Check Vercel logs.`);
                     }
                 }
 
                 const data = await response.json();
                 
                 if (data.agentResponse) {
-                    // We remove the .replace(/\n/g, '\n') here as it's handled in displayMessage
                     displayMessage(data.agentResponse, 'agent'); 
                 } else {
                     displayMessage('Error: Received an invalid or empty response structure from the Agent.', 'agent');
